# eo-api

./: .env.example  .gitignore  README.md  pyproject.toml
src/eo_api/: __init__.py  config.py  database.py  main.py
src/eo_api/models/: __init__.py  responses.py
src/eo_api/routers/: __init__.py  analytics.py  carbon.py  prices.py  settlement.py
src/eo_api/services/: __init__.py  analytics_service.py  carbon_service.py  price_service.py  settlement_service.py
tests/: __init__.py
